Fix the saved cache name for build-backend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -334,7 +334,7 @@ jobs:
             - backend/_esy
             - backend/node_modules
             - .esy
-          key: v12-backend-{{ checksum "backend/esy.json" }}
+          key: v0d-backend-{{ checksum "backend/esy.json" }}-{{ .Branch }}
       - persist_to_workspace:
           root: "."
           paths:
