Pull the docker container to save time

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,20 +213,19 @@ jobs:
     executor: my-executor
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
-      # Save the docker env: type .docker-env when sshing in, then you can
-      # use ./scripts/run-in-docker
-      - run: |
-          env \
-          | grep 'DOCKER\|NO_PROXY' \
-          | sed 's/^/export /' \
-          > /root/docker-env
+      - prep-container-creation
       - run: apk add python3 --update-cache 
       - run: pip3 install awscli --upgrade --user
+      - run: $(/root/.local/bin/aws ecr get-login --no-include-email --region us-east-1)
+      - run:
+          name: Pre-fetch docker container
+          shell: bash
+          command: |
+            if [[ `docker images dark-ci -q` == "" ]]
+            then docker pull 500377317163.dkr.ecr.us-east-1.amazonaws.com/dark-ci:latest
+            fi
       - run: docker build -t dark-ci .
       - run: docker tag dark-ci:latest 500377317163.dkr.ecr.us-east-1.amazonaws.com/dark-ci:latest
-      - run: $(/root/.local/bin/aws ecr get-login --no-include-email --region us-east-1)
       - run: docker push 500377317163.dkr.ecr.us-east-1.amazonaws.com/dark-ci:latest
 
   build-client:
