Fix saving test results

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,7 +265,7 @@ jobs:
       - store_artifacts:
           path: /home/dark/app/rundir
       - store_test_results:
-          path: artifacts/rundir/test_results
+          path: rundir/test_results
 
   build-backend:
     executor: in-container
