--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,17 @@ commands:
           name: Assert the worktree is clean
           command: "bash -c '[[ -z $(git status -s) ]] && echo Workdir is clean || { echo Workdir is not clean:; git status -s; $(exit 1); }'"
 
+
+  ##########################
+  # Setup app
+  ##########################
+  setup-app:
+    steps:
+      - run: scripts/support/setup-circleci-environment
+      - run: env
+      - run: scripts/support/create-app-directories
+      - run: scripts/support/create-cache-directories
+
   ##########################
   # Rust
   ##########################
@@ -64,6 +75,7 @@ commands:
       project:
         type: string
     steps:
+      - setup-app
       - restore_cache:
           keys:
             # This cache should be about 500MB or so. It balloons over time and needs to be deleted.
@@ -238,8 +250,7 @@ jobs:
     executor: in-container
     steps:
       - checkout
-      - run: scripts/support/setup-circleci-environment
-      - run: scripts/support/create-cache-directories
+      - setup-app
       - restore_cache:
           keys:
             - v0d-client-{{ checksum "client/yarn.lock" }}-{{ .Branch }}
@@ -277,8 +288,7 @@ jobs:
     executor: in-container
     steps:
       - checkout
-      - run: scripts/support/setup-circleci-environment
-      - run: scripts/support/create-cache-directories
+      - setup-app
       - restore_cache:
           keys:
             - v0d-backend-{{ checksum "backend/esy.json" }}-{{ .Branch }}
@@ -321,10 +331,6 @@ jobs:
     executor: in-container
     steps:
       - checkout
-      - run: env
-      - run: scripts/support/setup-circleci-environment
-      - run: env
-      - run: scripts/support/create-cache-directories
       - rust-setup: { project: "stroller" }
       - run: env
       - run: scripts/support/compile stroller/Cargo.toml --test
@@ -336,8 +342,6 @@ jobs:
     executor: in-container
     steps:
       - checkout
-      - run: scripts/support/setup-circleci-environment
-      - run: scripts/support/create-cache-directories
       - rust-setup: { project: "queue-scheduler" }
       - run: scripts/support/compile queue-scheduler/Cargo.toml --test
       - run: scripts/gcp-build-containers --skip-ocaml --skip-stroller
@@ -366,8 +370,7 @@ jobs:
     parallelism: 4
     steps:
       - checkout
-      - run: scripts/support/setup-circleci-environment
-      - run: scripts/support/create-cache-directories
+      - setup-app
       - attach_workspace: { at: "." }
       - restore_cache: # get testcafe
           keys:
