--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -334,6 +334,8 @@ jobs:
       - rust-setup: { project: "stroller" }
       - run: env
       - run: scripts/support/compile stroller/Cargo.toml --test
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run: scripts/gcp-build-containers --skip-ocaml --skip-queue-scheduler
       - assert-clean-worktree
       - rust-finish: { project: "stroller" }
@@ -344,6 +346,8 @@ jobs:
       - checkout
       - rust-setup: { project: "queue-scheduler" }
       - run: scripts/support/compile queue-scheduler/Cargo.toml --test
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run: scripts/gcp-build-containers --skip-ocaml --skip-stroller
       - assert-clean-worktree
       - rust-finish: { project: "queue-scheduler" }
