--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -344,7 +344,8 @@ jobs:
     steps:
       - checkout
       - rust-setup: { project: "queue-scheduler" }
-      - run: scripts/support/compile queue-scheduler/Cargo.toml --test
+      # tests are run in rust-integration-tests
+      - run: scripts/support/compile queue-scheduler/Cargo.toml
       - setup_remote_docker:
           docker_layer_caching: true
       - run: scripts/gcp-build-containers --skip-ocaml --skip-stroller
